syntax = "proto3";

package roles;

enum UserRole {
    USER_ROLE_UNSPECIFIED = 0;
    USER_ROLE_CUSTOMER = 1;
    USER_ROLE_COURIER = 2;
    USER_ROLE_RESTAURANT_MANAGER = 3;
    USER_ROLE_MODERATOR = 4;
}


service RolesService {
    rpc GetUserRole(GetUserRoleRequest) returns (GetUserRoleResponse);
}

message GetUserRoleRequest {
    string access_token = 1;
}

message GetUserRoleResponse {
    int64 user_id = 1;
    UserRole role = 2;
}